--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
             "Think again! 💭",
             "I'll take you to Italy! 🏝️",
             "Pretty please? 🥺",
-            "No more cafe dates? ☕",
+            "No more dinner dates? ☕",
             "But who'll travel with me? ✈️",
             "Come on... 🙄",
             "Please Mani! 💕",
